crates/oxc_react_compiler/tests/snapshots/context-variable-as-jsx-element-tag.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/context-variable-as-jsx-element-tag.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees:false
import { useMemo } from "react";
import { Stringify } from "shared-runtime";
function Component(props) {
	const $ = _c(3);
	let _Component;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		_Component = Stringify;
		_Component;
		_Component = _Component;
		$[0] = _Component;
	} else {
		_Component = $[0];
	}
	let t0;
	if ($[1] !== props) {
		t0 = <_Component {...props} />;
		$[1] = props;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ name: "Sathya" }]
};
