crates/oxc_react_compiler/tests/snapshots/context-variable-reactive-implicit-control-flow.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/context-variable-reactive-implicit-control-flow.js
---
import { c as _c } from "react/compiler-runtime";
import { conditionalInvoke } from "shared-runtime";
// same as context-variable-reactive-explicit-control-flow.js, but make
// the control flow implicit
function Component(t0) {
	const $ = _c(2);
	const { shouldReassign } = t0;
	let x;
	if ($[0] !== shouldReassign) {
		x = null;
		const reassign = () => {
			x = 2;
		};
		conditionalInvoke(shouldReassign, reassign);
		$[0] = shouldReassign;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ shouldReassign: true }],
	sequentialRenders: [{ shouldReassign: false }, { shouldReassign: true }]
};
