crates/oxc_react_compiler/tests/snapshots/context-variable-reassigned-objectmethod.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/context-variable-reassigned-objectmethod.js
---
import { c as _c } from "react/compiler-runtime";
import { invoke } from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	const { cond } = t0;
	let x;
	if ($[0] !== cond) {
		x = 2;
		const obj = { method(cond_0) {
			if (cond_0) {
				x = 4;
			}
		} };
		invoke(obj.method, cond);
		$[0] = cond;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ cond: true }]
};
