crates/oxc_react_compiler/tests/snapshots/context-variable-reassigned-reactive-capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/context-variable-reassigned-reactive-capture.js
---
import { c as _c } from "react/compiler-runtime";
import { invoke } from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	const { value } = t0;
	let x;
	if ($[0] !== value) {
		x = null;
		const reassign = () => {
			x = value;
		};
		invoke(reassign);
		$[0] = value;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 2 }],
	sequentialRenders: [{ value: 2 }, { value: 4 }]
};
