crates/oxc_react_compiler/tests/snapshots/custom-opt-out-directive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/custom-opt-out-directive.tsx
---
// @expectNothingCompiled @customOptOutDirectives:["use todo memo"]
function Component() {
	"use todo memo";
	return <div>hello world!</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
