crates/oxc_react_compiler/tests/snapshots/dce-loop.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/dce-loop.js
---
function foo(props) {
	let y = 0;
	while (y < props.max) {
		y++;
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [{ max: 10 }],
	isComponent: false
};
